package javanew;

public interface AccountAction{
    public void closeAccount();
    public void openAccount();

}
