package javanew;

public interface AccountHelpMethods {
    public String toString();
    public boolean equals(Object o);
}
