package javanew;

public interface ClientAccountAction {
    public void addMoney(float summa);
    public boolean subMoney(float summa);
    public float check_balance();

}
